--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -64,11 +64,11 @@
   "settingsSleepSchedule": "Editar horário de sono",
   "settingsSleepScheduleAppBar": "Editar horário de sono",
   "settingsSleepScheduleDescription": "A gente só precisa de alguns detalhes para atualizar seu horário de sono",
-  "settingsSleepScheduleTitle": "Atualizar",
+  "settingsSleepScheduleTitle": "Horário de Sono",
   "settingsUnitSystem": "Sistema de unidades",
   "settingsUpdateDailyGoalAppBar": "Atualizar meta",
   "settingsUpdateDailyGoalDescription": "A gente só precisa de alguns detalhes para atualizar sua meta",
-  "settingsUpdateDailyGoalTitle": "Atualizar",
+  "settingsUpdateDailyGoalTitle": "Meta Diária",
   "settingsUpdateYourDailyGoal": "Atualizar meta diária",
   "settingsYouSection": "Você",
 
