docs(translation): update settings titles German translation

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -56,10 +56,10 @@
     "settingsNotifications": "Benachrichtigungen",
     "settingsSleepSchedule": "Schlafplan bearbeiten",
     "settingsUpdateDailyGoalAppBar": "Tagesziel aktualisieren",
-    "settingsUpdateDailyGoalTitle": "Aktualisieren",
+    "settingsUpdateDailyGoalTitle": "Tagesziel",
     "settingsUpdateDailyGoalDescription": "Hilf uns mit ein paar Details, damit wir dein Tagesziel zu aktualisieren können",
     "settingsSleepScheduleAppBar": "Schlafplan bearbeiten",
-    "settingsSleepScheduleTitle": "Aktualisieren",
+    "settingsSleepScheduleTitle": "Schlafplan",
     "settingsSleepScheduleDescription": "Hilf uns mit ein paar Details, damit wir deinen Schlafplan aktualisieren können",
     "settingsYouSection": "Du",
     "settingsAboutSection": "Über",
