feat(settings_page): move notifications settings to a section

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -5,6 +5,7 @@
   "doNotSaveLabel": "Do not save",
   "editAction": "Edit",
   "updateAction": "Update",
+  "manageAction": "Manage",
 
   "bottomNavHomeLabel": "Home",
   "bottomNavSummaryLabel": "Summary",
@@ -58,7 +59,6 @@
   "settingsFeedback": "Send feedback",
   "settingsFeedbackDescription": "Share your thoughts with us",
   "settingsGeneralSection": "General",
-  "settingsNotifications": "Notifications",
   "settingsPageTitle": "Settings",
   "settingsSetCustomDailyGoal": "Set a custom daily goal",
   "settingsSleepSchedule": "Edit sleep schedule",
@@ -71,6 +71,7 @@
   "settingsUpdateDailyGoalTitle": "Daily Goal",
   "settingsUpdateYourDailyGoal": "Update your daily goal",
   "settingsYouSection": "You",
+  "settingsNotificationsSection": "Notifications",
 
   "setupAgeTextFieldInvalidValue": "Age between 10 and 120",
   "setupAgeTextFieldLabel": "Your age",
