feat: add page to update notification frequency

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -72,6 +72,7 @@
   "settingsUpdateYourDailyGoal": "Update your daily goal",
   "settingsYouSection": "You",
   "settingsNotificationsSection": "Notifications",
+  "settingsNotificationsFrequency": "Frequency",
 
   "setupAgeTextFieldInvalidValue": "Age between 10 and 120",
   "setupAgeTextFieldLabel": "Your age",
