feat: add notification setting for frequency (#59)
* feat(settings_page): move notifications settings to a section

* feat(settings_page): move notifications settings to a section

* fix(settings_page): duplicated notifications section

* feat: move sleep schedule settings to the notifications section

* feat: add page to update notification frequency

* refactor(settings_frequency): use localized message

* refactor: add time util class

* feat: store notification frequency

* refactor(settings_notifications): load frequency text dynamically

* feat: register new notification task after changing frequency

* feat(settings_notifications): remove frequency button

* feat: move frequency settings to notifications time input

* refactor(notification_settings): only register new frequency periodic task after clicking on a save button

* fix: use correct frequency after editing sleep schedule

* refactor(settings_frequency): remove unneeded null check

* fix: show current frequency after opening sleep schedule page

* refactor(settings_frequency): use enum method to get frequency by value

* feat(settings): move notification section below the you section

* feat(settings_notification): add description to text buttons

* feat(setting_sleep_schedule): add loading indicator

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -5,6 +5,7 @@
   "doNotSaveLabel": "Do not save",
   "editAction": "Edit",
   "updateAction": "Update",
+  "manageAction": "Manage",
 
   "bottomNavHomeLabel": "Home",
   "bottomNavSummaryLabel": "Summary",
@@ -58,7 +59,6 @@
   "settingsFeedback": "Send feedback",
   "settingsFeedbackDescription": "Share your thoughts with us",
   "settingsGeneralSection": "General",
-  "settingsNotifications": "Notifications",
   "settingsPageTitle": "Settings",
   "settingsSetCustomDailyGoal": "Set a custom daily goal",
   "settingsSleepSchedule": "Edit sleep schedule",
@@ -71,6 +71,10 @@
   "settingsUpdateDailyGoalTitle": "Daily Goal",
   "settingsUpdateYourDailyGoal": "Update your daily goal",
   "settingsYouSection": "You",
+  "settingsNotificationsSection": "Notifications",
+  "settingsNotificationsManageDescription": "Toggle notifications",
+  "settingsNotificationsSleepScheduleDescription": "Wake/sleep times & frequency",
+  "settingsNotificationsFrequency": "Frequency",
 
   "setupAgeTextFieldInvalidValue": "Age between 10 and 120",
   "setupAgeTextFieldLabel": "Your age",
@@ -99,5 +103,33 @@
   "kgUnit": "kg",
   "lbUnit": "lb",
   "metric": "Metric",
-  "mlUnit": "ml"
+  "mlUnit": "ml",
+
+  "minutes": "{time} minutes",
+  "@minutes": {
+    "placeholders": {
+      "time": {
+        "type": "String",
+        "example": "15"
+      }
+    }
+  },
+  "hour": "{time} hour",
+  "@hour": {
+    "placeholders": {
+      "time": {
+        "type": "String",
+        "example": "1"
+      }
+    }
+  },
+  "hours": "{time} hours",
+  "@hours": {
+    "placeholders": {
+      "time": {
+        "type": "String",
+        "example": "2"
+      }
+    }
+  }
 }
