feat(water_action_buttons): add rearrange popup menu item

--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -4,6 +4,7 @@
   "deleteAction": "Deletar",
   "doNotSaveLabel": "Não salvar",
   "editAction": "Editar",
+  "rearrangeAction": "Reorganizar",
   "updateAction": "Atualizar",
   "manageAction": "Gerenciar",
 
