--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -7,18 +7,22 @@
   "rearrangeAction": "Reorganizar",
   "updateAction": "Atualizar",
   "manageAction": "Gerenciar",
+
   "bottomNavHomeLabel": "Home",
   "bottomNavSummaryLabel": "Resumo",
+
   "customCupButton": "Personalizado",
   "customCupDialogTextFieldAmount": "Quantidade",
   "customCupDialogTitle": "Adicionar copo personalizado",
   "editCustomCupDialogTitle": "Editar copo personalizado",
   "editCustomCupFailed": "Não foi possível editar o copo. Por favor, reporte o erro no GitHub e mencione o código 'ECE01'.",
   "editCustomCupSuccess": "Copo editado com sucesso!",
+
   "dailyGoal": "Meta diária",
   "dailyGoalUpdated": "Meta diária salva com sucesso",
+
   "dayHistoryBottomSheetItemSubtitle": "adicionado às {time}",
-  "@dayHistoryBottomSheetItemSubtitle": {
+    "@dayHistoryBottomSheetItemSubtitle": {
     "placeholders": {
       "time": {
         "type": "String",
@@ -29,6 +33,7 @@
   "dayHistoryBottomSheetNoItems": "Nada por aqui :(",
   "dayHistoryBottomSheetTitle": "Histórico do dia",
   "dayLoadingFailed": "Dia não encontrado",
+
   "notificationTaskCreationFailed": "Falha ao criar a tarefa de notificação",
   "pageNotAvailableDescription": "Desculpa, essa página ainda não está disponível :(",
   "pageNotAvailableTitle": "Indisponível",
@@ -37,20 +42,30 @@
   "textFieldAmountError": "Quantidade inválida",
   "valueNotSupported": "Valor não suportado",
   "waterAddFailed": "Ops! Não foi possível adicionar sua água. Tentar novamente?",
+
   "homePageTodayAppBarTitle": "Hoje",
+
   "notificationSetupDescription": "Vamos ajustar as notificações para combinar com seu dia",
   "notificationSetupTitle": "Notificações",
   "notificationsSettingsSleep": "Você dorme às",
   "notificationsSettingsWakeUp": "Você acorda às",
   "reminderNotificationBody": "Cuide do seu corpo, tome um gole!",
   "reminderNotificationTitle": "💧 Hora de se hidratar!",
+
   "progressCircleOf": "de",
+
   "settingsAboutSection": "Sobre",
   "settingsContribute": "Contribuir",
   "settingsContributeDescription": "Acesse o repositório no GitHub",
   "settingsFeedback": "Enviar feedback",
   "settingsFeedbackDescription": "Compartilhe suas ideias com a gente",
   "settingsGeneralSection": "Geral",
+  "settingsNotifications": "Notificações",
+  "settingsNotificationsSection": "Notificações",
+  "settingsNotificationsManageDescription": "Ativar/desativar notificações",
+  "settingsNotificationsSleepScheduleDescription": "Horário de acordar/dormir & frequência",
+  "settingsNotificationsFrequency": "Frequência",
+  "settingsTheme": "Tema",
   "settingsPageTitle": "Configurações",
   "settingsSetCustomDailyGoal": "Definir meta diária personalizada",
   "settingsSleepSchedule": "Editar horário de sono",
@@ -63,18 +78,14 @@
   "settingsUpdateDailyGoalTitle": "Meta Diária",
   "settingsUpdateYourDailyGoal": "Atualizar meta diária",
   "settingsYouSection": "Você",
-  "settingsNotificationsSection": "Notificações",
-  "settingsNotificationsManageDescription": "Ativar/desativar notificações",
-  "settingsNotificationsSleepScheduleDescription": "Horário de acordar/dormir & frequência",
-  "settingsNotificationsFrequency": "Frequência",
-  "settingsTheme": "Tema",
+
   "setupAgeTextFieldInvalidValue": "Idade entre 10 e 120",
   "setupAgeTextFieldLabel": "Sua idade",
   "setupDataText": "Seus dados são armazenados no seu dispositivo.",
   "setupUnitImperial": "lb, fl oz",
   "setupUnitMetric": "kg, ml",
   "setupWeightTextFieldInvalidWeight": "Peso entre {minWeight} e {maxWeight}",
-  "@setupWeightTextFieldInvalidWeight": {
+    "@setupWeightTextFieldInvalidWeight": {
     "placeholders": {
       "minWeight": {
         "type": "String",
@@ -89,12 +100,14 @@
   "setupWeightTextFieldLabel": "Seu peso",
   "setupWelcomeSubtitle": "Só precisamos configurar algumas coisas. Vai ser rápido e fácil!",
   "setupWelcomeTitle": "Bem-vindo",
+
   "flOzUnit": "fl oz",
   "imperial": "Imperial",
   "kgUnit": "kg",
   "lbUnit": "lb",
   "metric": "Métrico",
   "mlUnit": "ml",
+
   "minutes": "{time} minutos",
   "@minutes": {
     "placeholders": {
@@ -122,6 +135,7 @@
       }
     }
   },
+
   "system": "Sistema",
   "light": "Claro",
   "dark": "Escuro"
