--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -77,6 +77,7 @@
   "settingsNotificationsSleepScheduleDescription": "Wake/sleep times & frequency",
   "settingsNotificationsFrequency": "Frequency",
   "settingsTheme": "Theme",
+  "settingsHapticFeedback": "Haptic Feedback",
 
   "setupAgeTextFieldInvalidValue": "Age between 10 and 120",
   "setupAgeTextFieldLabel": "Your age",
