feat: add semantic label for adding cup and saving changes

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -142,6 +142,8 @@
 
   "historyIconSemanticLabel": "History",
   "settingsIconSemanticLabel": "Settings",
+  "addCupIconSemanticLabel": "Add cup",
+  "saveChangesIconSemanticLabel": "Save changes",
   "waterRemoveIconSemanticLabel": "Remove {amount}",
   "@waterRemoveIconSemanticLabel": {
     "placeholders": {
