feat: add go back semantic label

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -144,6 +144,7 @@
   "settingsIconSemanticLabel": "Settings",
   "addCupIconSemanticLabel": "Add cup",
   "saveChangesIconSemanticLabel": "Save changes",
+  "goBackIconSemanticLabel": "Go back",
   "waterRemoveIconSemanticLabel": "Remove {amount}",
   "@waterRemoveIconSemanticLabel": {
     "placeholders": {
