feat: improve accessibility with semantic labels (#94)
* feat: add semantic label for icons

* feat: add semantic label for adding cup and saving changes

* feat: add save changes semantic label in settings

* feat: add go back semantic label

* feat: add go back semantic label for daily history bottom sheet

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -138,5 +138,20 @@
 
   "system": "System",
   "light": "Light",
-  "dark": "Dark"
+  "dark": "Dark",
+
+  "historyIconSemanticLabel": "History",
+  "settingsIconSemanticLabel": "Settings",
+  "addCupIconSemanticLabel": "Add cup",
+  "saveChangesIconSemanticLabel": "Save changes",
+  "goBackIconSemanticLabel": "Go back",
+  "waterRemoveIconSemanticLabel": "Remove {amount}",
+  "@waterRemoveIconSemanticLabel": {
+    "placeholders": {
+      "amount": {
+        "type": "String",
+        "example": "2ml"
+      }
+    }
+  }
 }
