feat(global_stats): add singular for "day" and function to dynamically pick one

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -140,6 +140,7 @@
   "bestStreakStat": "Best Streak",
   "totalIntakeStat": "Total Intake",
   "averageIntakeStat": "Avg. Intake",
+  "day": "day",
   "days": "days",
 
   "system": "System",
