feat(global_stats): use localized messages for no data

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -136,6 +136,9 @@
     }
   },
 
+  "globalStatisticsTitle": "Global Statistics",
+  "globalStatisticsNoDataDescription": "Your data will appear here soon!",
+
   "currentStreakStat": "Current Streak",
   "bestStreakStat": "Best Streak",
   "totalIntakeStat": "Total Intake",
