feat(weekly_intake_graphic): use localized messages

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -146,6 +146,9 @@
   "day": "day",
   "days": "days",
 
+  "weeklyIntakeTitle": "Weekly Intake",
+  "weeklyIntakeNoData": "We're still working on your weekly intake chart. Come back soon to see it!",
+
   "system": "System",
   "light": "Light",
   "dark": "Dark",
