feat: summary page (#99)
* refactor: move home_page logic to water_tracking_screen

* refactor: use home page to store bottom navigation bar data

* feat: create summary_screen

* feat: structure base summary screen

* feat: create stats cards with dummy data

* feat: create global statistics model

* feat: create summary_repository

* refactor(summary_screen): create a widget for global stats

* feat: implement global stats summary

* feat(global_statistic): add copyWith and toJson methods

* fix: restart life cycle when accessing summary screen

* feat(summary_global_stats): load real data

* feat(day_repository): add method for retrieving days count

* feat(summary_repository): return default global statistic instead of null

* feat: update average intake

* fix: divide averageIntake by new total intake

* feat: update current streak and best streak

* feat(global_stats): show ml or fl oz

* feat(global_stats): use localized messages

* feat(global_stats): add singular for "day" and function to dynamically pick one

* feat(global_stats): show data not available widget if no data was returned or if error occurred

* feat(global_stats): use localized messages for no data

* feat(global_stats): reset current streak if user did not meet goal on a day

* feat: add base screen for weekly intake graphic

* chore(deps): add fl_chart

* feat: add dummy weekly intake graphic

* feat(day_repository): method to retrieve multiple days

* feat(weekly_graphic): load real data

* feat(weekly_intake_graphic): handle null data

* feat(weekly_intake_graphic): use localized messages

* refactor(weekly_intake_graphic_view_model): add basic error handling

* fix(weekly_intake_graphic): include sundays

* style: break line

* feat(global_stats): use day plural if amount is equals to zero

* feat(global_stats): retrieve from existing data

* test: add basic test for summary global stats

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -136,6 +136,19 @@
     }
   },
 
+  "globalStatisticsTitle": "Global Statistics",
+  "globalStatisticsNoDataDescription": "Your data will appear here soon!",
+
+  "currentStreakStat": "Current Streak",
+  "bestStreakStat": "Best Streak",
+  "totalIntakeStat": "Total Intake",
+  "averageIntakeStat": "Avg. Intake",
+  "day": "day",
+  "days": "days",
+
+  "weeklyIntakeTitle": "Weekly Intake",
+  "weeklyIntakeNoData": "We're still working on your weekly intake chart. Come back soon to see it!",
+
   "system": "System",
   "light": "Light",
   "dark": "Dark",
