chore(l10n): update pt translation

--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -60,12 +60,6 @@
   "settingsFeedback": "Enviar feedback",
   "settingsFeedbackDescription": "Compartilhe suas ideias com a gente",
   "settingsGeneralSection": "Geral",
-  "settingsNotifications": "Notificações",
-  "settingsNotificationsSection": "Notificações",
-  "settingsNotificationsManageDescription": "Ativar/desativar notificações",
-  "settingsNotificationsSleepScheduleDescription": "Horário de acordar/dormir & frequência",
-  "settingsNotificationsFrequency": "Frequência",
-  "settingsTheme": "Tema",
   "settingsPageTitle": "Configurações",
   "settingsSetCustomDailyGoal": "Definir meta diária personalizada",
   "settingsSleepSchedule": "Editar horário de sono",
@@ -78,6 +72,12 @@
   "settingsUpdateDailyGoalTitle": "Meta Diária",
   "settingsUpdateYourDailyGoal": "Atualizar meta diária",
   "settingsYouSection": "Você",
+  "settingsNotificationsSection": "Notificações",
+  "settingsNotificationsManageDescription": "Ativar/desativar notificações",
+  "settingsNotificationsSleepScheduleDescription": "Horário de acordar/dormir & frequência",
+  "settingsNotificationsFrequency": "Frequência",
+  "settingsTheme": "Tema",
+  "settingsHapticFeedback": "Feedback tátil",
 
   "setupAgeTextFieldInvalidValue": "Idade entre 10 e 120",
   "setupAgeTextFieldLabel": "Sua idade",
@@ -136,7 +136,35 @@
     }
   },
 
+  "globalStatisticsTitle": "Estatísticas Globais",
+  "globalStatisticsNoDataDescription": "Seus dados aparecerão aqui em breve!",
+
+  "currentStreakStat": "Sequência atual",
+  "bestStreakStat": "Melhor sequência",
+  "totalIntakeStat": "Consumo total",
+  "averageIntakeStat": "Consumo médio",
+  "day": "dia",
+  "days": "dias",
+
+  "weeklyIntakeTitle": "Consumo semanal",
+  "weeklyIntakeNoData": "Ainda estamos montando seu gráfico de consumo semanal. Volte em breve para ver!",
+
   "system": "Sistema",
   "light": "Claro",
-  "dark": "Escuro"
+  "dark": "Escuro",
+
+  "historyIconSemanticLabel": "Histórico",
+  "settingsIconSemanticLabel": "Configurações",
+  "addCupIconSemanticLabel": "Adicionar copo",
+  "saveChangesIconSemanticLabel": "Salvar alterações",
+  "goBackIconSemanticLabel": "Voltar",
+  "waterRemoveIconSemanticLabel": "Remover {amount}",
+  "@waterRemoveIconSemanticLabel": {
+    "placeholders": {
+      "amount": {
+        "type": "String",
+        "example": "2ml"
+      }
+    }
+  }
 }
